# trans-cli

./: .gitignore  Cargo.toml  LANGUAGE_CODES.md  Makefile  README.md  config.example.toml  test.sh
.github/workflows/: release.yml
doc/: Baidu_Text_transAPI.py
src/: lib.rs  main.rs
